# File---Ex-2.2

./: CMakeLists.txt
data/: Data_Monster.json
include/: imageManager.h  monster.h  monsterManager.h
src/: imageManager.cpp  main.cpp  monster.cpp  monsterManager.cpp
